fixed layout issues and mobile first responsive design

--- a/src/components/styles/SideDrawer.css
+++ b/src/components/styles/SideDrawer.css
@@ -1,8 +1,8 @@
 .side-drawer {
   height: 100%;
   width: 70%;
-  max-width: 350px;
-  background: white;
+  max-width: 300px;
+  background: #becfdc;
   box-shadow: 1px 0px 8px rgba(0, 0, 0, 0.5);
   position: fixed;
   top: 0;
@@ -22,12 +22,13 @@
   display: flex;
   flex-direction: column;
   justify-content: center;
+  line-height: 2.5rem;
 }
 
 .side-drawer a {
   color: black;
   text-decoration: none;
-  font-size: 1.2rem;
+  font-size: 1.5rem;
 }
 
 .side-drawer a:hover,
