--- a/src/components/styles/Toolbar.css
+++ b/src/components/styles/Toolbar.css
@@ -3,9 +3,10 @@
   top: 0;
   left: 0;
   width: 100%;
-  height: 70px;
+  height: 60px;
   background: #becfdc;
-  opacity: 0.4;
+  opacity: 0.6;
+  z-index: 100;
 }
 
 .toolbar_navigation {
@@ -13,11 +14,6 @@
   align-items: center;
   height: 100%;
   padding: 0 1rem;
-}
-
-.toolbar_logo {
-  margin-top: 30px;
-  margin-left: 0;
 }
 
 .spacer {
